# Algorithms-and-Datastructures-in-C

./: ArrayList.h  CMakeLists.txt  README.md  create.sh
BinarySearch/: binarySearch.c  binarySearch.h  binarySearch.md
BinaryTree/: BinaryTree.c  BinaryTree.h
BubbleSort/: bubbleSort.c  bubbleSort.h  bubbleSort.md
LinkedList/: linkedList.c  linkedList.h  linkedList.md
sqaureRoot/: squareRoot.c  squareRoot.h
squareRoot/: squareRoot.c  squareRoot.h  squareRoot.md
twoCrystalBalls/: twoCrystalBalls.c  twoCrystalBalls.h  twoCrystalBalls.md
